# VivaranAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_WEB_SCRAPING_README.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.railway  E2E_TESTING_GUIDE.md  GENERIC_OCR_ROUTER_PROPOSAL.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  LICENSE  Procfile  README.md  TESTING_DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  alembic.ini  debug_server.py  demo_foundation.py  demo_medical_bill_agent.py  demo_registry_router.py  demo_smart_data_agent.py  docker-compose.yml  env.example  locustfile.py  medbillguardagent.py  medbillguardagent_simple.py  monitor_railway.py  nixpacks.toml  pyproject.toml  railway.env.example  railway.json  railway.toml  railway_server.py  railway_startup.py  requirements-dev.txt  requirements-production.txt  requirements.txt  (+13 more)
.cursor/rules/: context.mdc
.github/workflows/: ci-cd.yml  ci.yml
.windsurf/rules/: context.md  create-prd.md  generate-tasks.md  process-task-list.md
agents/: README.md  __init__.py  agent_registry.py  base_agent.py  interfaces.py  medical_bill_agent.py  metrics_server.py  redis_state.py  router_agent.py  server.py  simple_router.py  smart_data_agent.py  tool_registry.py
agents/base/: __init__.py  validators.py
agents/tools/: __init__.py  ai_web_scraper.py  base_tool.py  confidence_scorer_tool.py  document_processor_tool.py  document_type_classifier.py  duplicate_detector_tool.py  enhanced_router_agent.py  entity_mapper.py  generic_ocr_tool.py  load_balancer.py  monitoring.py  production_integration.py  prohibited_detector_tool.py  rate_validator_tool.py  resilience.py  scaling.py  smart_data_tool.py  tool_manager.py
agents/verticals/loan/: __init__.py  loan_risk_agent.py
agents/verticals/loan/tools/: __init__.py  loan_risk_validator_tool.py
agents/verticals/medical/: __init__.py  medical_rate_validator.py
agents/verticals/medical/tools/: __init__.py  medical_rate_validator_tool.py
compliance/: data_protection.py
config/: default.yaml  env_config.py  production.yaml  test.yaml
data/: cghs_rates_2023.json  esi_rates.json  nppa_mrp.csv  nppa_mrp.json  prohibited.json
data/state_tariffs/: delhi.json  karnataka.json  maharashtra.json
database/: bill_chat_context.py  models.py
database/migrations/: env.py
database/migrations/versions/: 2025_07_07_0849-a592d8a8dc41_initial_database_schema.py
deployment/ssl/: ssl_setup.py
docs/: API_DOCUMENTATION.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  NEW_ARCHITECTURE.md  OAUTH2_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  RAILWAY_AGENT_REGISTRATION_FIX.md  RAILWAY_DEPLOYMENT.md  architecture_diagram.md
examples/: architecture_comparison.py  generic_ocr_router_demo.py
fixtures/: sample_bill.txt
frontend/: README-PRODUCTION.md  README.md  dashboard.html  index-oauth.html  index-production.html  index.html  serve-production.py  serve.py  test_connection.html
frontend/sample_bills/: apollo_high_overcharge.txt  government_normal.txt
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
libs/: performance.py  resilience.py  testing.py
medbillguardagent/: __init__.py  confidence_scorer.py  document_processor.py  duplicate_detector.py  explanation_builder.py  prohibited_detector.py  rate_validator.py  reference_data_loader.py  schemas.py
monitoring/: alerts.yml  prometheus.yml
ops/: disaster_recovery.py
packs/: __init__.py
packs/loan/: entity_map.csv  rules.yaml
packs/medical/: entity_map.csv  rules.yaml
scripts/: auto_railway_monitor.sh  deploy.sh  deploy_railway_fix.sh  manage_db.py  migrate_railway.py
security/: audit_tools.py  auth_middleware.py  oauth2_endpoints.py  oauth2_service.py  security_headers.py
shared/processors/: document_processor.py
shared/schemas/: schemas.py
shared/tools/: confidence_scorer.py  duplicate_detector.py
shared/utils/: cache_manager.py
tasks/: prd-medbillguardagent.md  tasks-prd-medbillguardagent.md
tests/: __init__.py  test_base_agent.py  test_cache_manager.py  test_confidence_scorer.py  test_document_processor.py  test_duplicate_detector.py  test_foundation_integration.py  test_loan_risk_agent.py  test_medical_bill_agent.py  test_medical_bill_agent_integration.py  test_pack_driven_architecture.py  test_performance.py  test_prohibited_detector.py  test_rate_validator.py  test_redis_state.py  test_reference_data_loader.py  test_registry_router_integration.py  test_regression.py  test_router_agent_multi_vertical.py
tests/test_data/: golden_fixtures.py  sample_medical_bills.py
